[tool.poetry]
name = "fbbg"
version = "0.1.0"
description = "Follow Blog, Blog Good ™"
authors = [ "Amirouche BOUBEKKI <amirouche@hyper.dev>"]

[tool.poetry.dependencies]
python = ">3.8"
lxml = "^4.9.2"
ipython = "^8.11.0"
feedgen = "^0.9.0"
pytz = "*"

[tool.poetry.scripts]
fbbg = 'fbbg:main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
